--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.2.4",
+    "@tanstack/react-query": "^5.71.0",
     "@web3-storage/w3up-client": "^17.2.0",
     "axios": "^1.8.4",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "next": "15.2.4",
     "openai": "^4.90.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "viem": "^2.24.2",
+    "wagmi": "^2.14.15",
     "web3.storage": "^4.5.5"
   },
   "devDependencies": {
