Fix Agent Proof

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "authorize-agent": "node scripts/authorizeAgent.js"
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.4",
